testsuite/testcases/ctorarg-f/ctorargf-flex.output

Error in file "testcases/ctorarg-f/ctorargf.flex" (line 10): 
Expected an identifier for constructor argument name.
%ctorarg Object 2y
                ^
1 error, 0 warnings.
